--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -35,9 +35,9 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/userpic"
-                    android:layout_width="60dp"
+                    android:layout_width="40dp"
                     android:transitionName="profilepic"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:foreground="?attr/selectableItemBackground"
                     android:src="@drawable/ic_astronaut" />
                 <LinearLayout
@@ -55,9 +55,9 @@
                         android:foreground="?attr/selectableItemBackground"
                         android:padding="5dp"
                         android:text="@string/username"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
                     <TextView
-                        android:textAlignment="center"
+                        android:textSize="12sp"
                         android:textStyle="italic"
                         android:id="@+id/dia"
                         android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:cardElevation="4dp">
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
