--- a/app/src/main/res/drawable/favoriteselected.xml
+++ b/app/src/main/res/drawable/favoriteselected.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/ic_favorite_border_black_24dp"
-        android:state_checked="false"/>
+        android:state_selected="false"/>
     <item android:drawable="@drawable/ic_favorite_red_24dp"
-        android:state_checked="true" />
+        android:state_selected="true" />
 </selector>
