--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,15 +34,66 @@
                 android:layout_height="wrap_content"
                 android:background="?android:colorBackground"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                <TextView
-                    android:textColor="?android:textColorPrimary"
-                    style="@style/TextAppearance.AppCompat.Display1"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    app:layout_collapseMode="parallax"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:text="Home"
-                    android:textStyle="bold"
-                    android:padding="10dp" />
-                
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:textColor="?android:textColorPrimary"
+                        style="@style/TextAppearance.AppCompat.Display1"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:text="Home"
+                        android:textStyle="bold"
+                        android:padding="10dp" />
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:padding="10dp"
+                        android:background="@drawable/bottom_line"
+                        android:id="@+id/banner"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:drawablePadding="5dp"
+                            android:drawableStart="@drawable/ic_google"
+                            android:id="@+id/message"
+                            android:textColor="?android:textColorPrimary"
+                            android:fontFamily="@font/lato_light"
+                            android:padding="10dp"
+                            android:textSize="16sp"
+                            android:text="Uma nova atualização está disponível"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_gravity="end"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/update"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:padding="10dp"
+                                android:text="Atuazlizar"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/dismiss"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:padding="10dp"
+                                android:text="Deixar para depois"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                </LinearLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
