--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,111 +2,87 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"                        android:id="@+id/myquotesrecycler"
-                android:orientation="vertical"
+
+
+            <androidx.viewpager.widget.ViewPager
+                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                android:id="@+id/quotespager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <com.google.android.material.tabs.TabLayout
-                    app:tabIndicatorFullWidth="false"
-                    app:tabMode="scrollable"
-                    android:id="@+id/usertabs"
+                android:layout_height="match_parent"/>
+
+
+
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
+                android:fitsSystemWindows="true"
+                android:background="?android:colorBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapsetoolbar"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:titleEnabled="false"
+                    app:contentScrim="?android:colorBackground"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <com.google.android.material.tabs.TabItem
-                        android:text="Posts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <com.google.android.material.tabs.TabItem
-                        android:text="Favoritos"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.tabs.TabLayout>
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/quotes"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            </LinearLayout>
-
-
-            <com.hmomeni.progresscircula.ProgressCircula
-                android:id="@+id/loading"
-                app:pgc_indeterminate="true"
-                app:pgc_progress="0"
-                app:pgc_rimColor="@color/colorPrimary"
-                app:pgc_rimWidth="3dp"
-                android:layout_gravity="center"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
-
-            <com.google.android.material.appbar.AppBarLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:background="@color/transparent"
-                android:fitsSystemWindows="true"
-                >
-                <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/topshimmer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:shimmer_highlight_color="@color/colorAccent"
-                    app:shimmer_base_color="?android:textColorHint"
-                    app:shimmer_direction="left_to_right"
-                    app:shimmer_dropoff="@integer/default_animation_duration"
-                    app:shimmer_shape="linear"
-                    app:shimmer_duration="500"
-                    app:shimmer_repeat_mode="reverse"
-                    app:shimmer_colored="true"
-                    app:shimmer_auto_start="true"
-                    >
-
-
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:id="@+id/collapsetoolbar"
-                    app:contentScrim="?android:colorBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:expandedTitleGravity="center"
-                    app:toolbarId="@id/profiletoolbar"
-                    app:layout_scrollFlags="exitUntilCollapsed|scroll"
-                    app:statusBarScrim="?android:colorBackground"
-                    android:fitsSystemWindows="true">
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_gravity="center"
-                        android:id="@+id/profilepic"
-                        android:src="@drawable/notfound"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp" />
-
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/profiletoolbar"
+                    <LinearLayout
+                        app:layout_collapseMode="parallax"
+                        android:padding="10dp"
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize" >
+                        android:layout_height="wrap_content">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_gravity="center"
+                            android:fitsSystemWindows="true"
+                            android:id="@+id/profilepic"
+                            android:src="@drawable/ic_undraw_new_ideas_jdea"
+                            app:civ_border_color="@color/colorAccent"
+                            app:civ_border_width="3dp"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:contentDescription="Profile picture" />
 
-                        <ImageButton
-                            android:layout_gravity="end"
-                            android:layout_margin="15dp"
-                            android:id="@+id/settings"
-                            android:background="@color/transparent"
-                            android:src="@drawable/ic_settings_black_24dp"
+                        <TextView
+                            android:textAlignment="center"
+                            style="@style/TextAppearance.AppCompat.Title"
+                            android:id="@+id/username"
+                            android:layout_gravity="center"
+                            android:text="@string/app_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
-                    </androidx.appcompat.widget.Toolbar>
+
+                    </LinearLayout>
+                    <androidx.appcompat.widget.Toolbar
+                        android:layout_gravity="top"
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        app:layout_collapseMode="parallax"/>
+
+
 
 
 
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <com.google.android.material.tabs.TabLayout
+                    app:tabTextColor="?android:textColorHint"
+                    app:tabSelectedTextColor="@color/colorPrimary"
+                    app:tabIndicatorFullWidth="false"
+                    app:tabMode="auto"
+                    android:id="@+id/usertabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                       />
             </com.google.android.material.appbar.AppBarLayout>
+
+
 
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
