--- a/app/src/main/res/menu/profilemenu.xml
+++ b/app/src/main/res/menu/profilemenu.xml
@@ -4,7 +4,7 @@
     <item
 
         android:id="@+id/edit"
-        android:icon="@drawable/ic_settings_black_24dp"
+        android:icon="@drawable/settings"
         android:title="Editar perfil"
          app:showAsAction="ifRoom" />
 </menu>
