--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,7 @@
                     app:titleEnabled="false"
                     app:contentScrim="?android:colorBackground"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="250dp">
 
                     <LinearLayout
                         app:layout_collapseMode="parallax"
@@ -58,11 +58,21 @@
 
                     </LinearLayout>
                     <androidx.appcompat.widget.Toolbar
-                        android:layout_gravity="top"
+                        android:layout_gravity="bottom"
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
-                        app:layout_collapseMode="parallax"/>
+                        app:layout_collapseMode="pin">
+                        <com.google.android.material.tabs.TabLayout
+                            app:tabTextColor="?android:textColorHint"
+                            app:tabSelectedTextColor="@color/colorPrimary"
+                            app:tabIndicatorFullWidth="false"
+                            app:tabMode="auto"
+                            android:id="@+id/usertabs"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+                    </androidx.appcompat.widget.Toolbar>
 
 
 
@@ -71,15 +81,7 @@
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
-                <com.google.android.material.tabs.TabLayout
-                    app:tabTextColor="?android:textColorHint"
-                    app:tabSelectedTextColor="@color/colorPrimary"
-                    app:tabIndicatorFullWidth="false"
-                    app:tabMode="auto"
-                    android:id="@+id/usertabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                       />
+
             </com.google.android.material.appbar.AppBarLayout>
 
 
