--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/navigation_home"
         android:title="Home"
@@ -8,5 +9,8 @@
         android:id="@+id/navigation_new"
         android:icon="@drawable/add"
         android:title="Escrever" />
+    <item android:id="@+id/profile"
+        android:title="Voce"
+        android:icon="@drawable/notfound"/>
 
 </menu>
