redesigned and implementations on adapters and presenters

--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".view.activities.ErrorActivity">
+    tools:context=".View.activities.ErrorActivity">
 
     <TextView
         style="@style/TextAppearance.AppCompat.Title"
