--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <RelativeLayout
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -18,6 +18,17 @@
             android:id="@+id/quotesrecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.budiyev.android.circularprogressbar.CircularProgressBar
+            android:id="@+id/loading"
+            android:layout_centerInParent="true"
+            app:animateProgress="true"
+            app:foregroundStrokeColor="@color/colorPrimary"
+            app:indeterminateSweepAnimationDuration="1500"
+            app:foregroundStrokeWidth="2dp"
+            app:indeterminate="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
 
 
