--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -8,7 +8,7 @@
         app:cardCornerRadius="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.fragments.HomeFragment">
+        tools:context=".View.fragments.HomeFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
