--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.fragments.HomeFragment">
+    tools:context=".View.fragments.HomeFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/home"
@@ -34,11 +34,33 @@
                 android:layout_height="wrap_content"
                 android:background="?android:colorBackground"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
                 <LinearLayout
                     app:layout_collapseMode="parallax"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:background="?android:colorBackground"
+                        android:id="@+id/toolbar"
+                        android:elevation="0dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:animateLayoutChanges="true"
+                        >
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profilepic"
+                            android:layout_width="45dp"
+                            android:layout_height="48dp"
+                            android:layout_gravity="left"
+                            android:layout_margin="1dp"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:padding="5dp"
+                            android:src="@drawable/penguin" />
+
+                    </androidx.appcompat.widget.Toolbar>
 
                     <TextView
                         android:textColor="?android:textColorPrimary"
@@ -96,6 +118,7 @@
                 </LinearLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
         </com.google.android.material.appbar.AppBarLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
