--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -3,22 +3,62 @@
 
 <!-- TODO: Update blank fragment layout -->
 <layout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
         android:background="@drawable/topround"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:background="?android:colorBackground"
-            android:id="@+id/toolbar"
-            app:title="Nova publicação"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="wrap_content"
+            app:elevation="0dp">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?android:colorBackground"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <LinearLayout
+                    app:layout_collapseMode="parallax"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:background="?android:colorBackground"
+                        android:id="@+id/toolbar"
+                        android:elevation="0dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:animateLayoutChanges="true"
+                       />
+
+
+                    <TextView
+                        android:textColor="?android:textColorPrimary"
+                        style="@style/TextAppearance.AppCompat.Display1"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:text="Nova publicação"
+                        android:textStyle="bold"
+                        android:padding="10dp" />
+
+
+
+
+                </LinearLayout>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
         <androidx.core.widget.NestedScrollView
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:layout_above="@id/salvar"
-            android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -211,7 +251,7 @@
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" />
-    </RelativeLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
 
 
