--- a/app/src/main/res/menu/newquotemenu.xml
+++ b/app/src/main/res/menu/newquotemenu.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-
-        android:id="@+id/settings"
-        android:icon="@drawable/settings"
-        android:title="Editar perfil"
-         app:showAsAction="ifRoom" />
+        android:id="@+id/salvar"
+        android:iconTint="@color/colorAccent"
+        android:title="Salvar"
+        app:showAsAction="always" />
 </menu>
